--- a/gov/templates/gov/redesign/elections.html
+++ b/gov/templates/gov/redesign/elections.html
@@ -235,9 +235,9 @@
       const jsTable1 = new JsTable({
         tableContainerId: 'js-ct-table-1',
         columns: [
-			{ name: 'Герб', className: 'j-t-image', isVisible: true },
-			{ name: 'Партия', className: 'j-t-title', isVisible: true },
-			{ name: 'Действие', className: 'j-t-action', isVisible: true },
+			{ name: '{% trans "Аватар" "context "lists" %}', className: 'j-t-image', isVisible: true },
+			{ name: '{% trans "Партия" "context "lists" %}', className: 'j-t-title', isVisible: true },
+			{ name: '{% trans "Действие" "context "lists" %}', className: 'j-t-action', isVisible: true },
         ],
       })
 
