--- a/state/templates/state/redesign/elections.html
+++ b/state/templates/state/redesign/elections.html
@@ -23,7 +23,7 @@
 
 		<!--Блок таблицы-->
     <div class="ct__js-table-container" id="js-ct-table-1">
-		<h1 class="ct__js-table-title ct__page-title">Выборы: {{ state.title }}</h1>
+		<h1 class="ct__js-table-title ct__page-title">{% trans 'Выборы' context "set_mandate" %}: {{ state.title }}</h1>
 		<!--кнопка открытия настроек-->
 		<button class="ct__js-modal-sett-open">
 			<svg version="1.0" xmlns="http://www.w3.org/2000/svg"
@@ -96,7 +96,7 @@
 
 	        <tr>
 			  <td class="j-t-image"></td>
-			  <td class="j-t-title">Партия</td>
+			  <td class="j-t-title">{% trans 'Партия' context "lists" %}</td>
 			  <td class="j-t-action"></td>
 	        </tr>
 
@@ -236,9 +236,9 @@
       const jsTable1 = new JsTable({
         tableContainerId: 'js-ct-table-1',
         columns: [
-			{ name: 'Герб', className: 'j-t-image', isVisible: true },
-			{ name: 'Партия', className: 'j-t-title', isVisible: true },
-			{ name: 'Действие', className: 'j-t-action', isVisible: true },
+			{ name: '{% trans "Герб" "context "lists" %}', className: 'j-t-image', isVisible: true },
+			{ name: '{% trans "Партия" "context "lists" %}', className: 'j-t-title', isVisible: true },
+			{ name: '{% trans "Действие" "context "lists" %}', className: 'j-t-action', isVisible: true },
         ],
       })
 
