--- a/player/templates/player/index.html
+++ b/player/templates/player/index.html
@@ -316,18 +316,38 @@
         <div class="login__logoWrapper">
           <h3>{% trans 'Мы в VK' context "index" %}</h3>
         </div>
-        <div id="vk_groups"></div>
+
+        <div id="vk_placeholder" style="position: relative;  cursor: pointer; width: 300px;height: 500px;background: url('/static/img/index/group_placeholder.webp') center/cover;filter: blur(3px); margin-top: -18rem">
+        </div>
+
+        <div id="vk_button_container" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); z-index: 1;">
+          <button onclick="loadVKWidget()" style="padding: 10px 20px; background-color: transparent; color: var(--c10two); border: 2px solid var(--c10two); cursor: pointer;">
+            <span>{% trans 'читать' context "index" %}</span>
+          </button>
+        </div>
+
+        <div id="vk_groups" style="display: none;"></div>
+
         <script type="text/javascript">
-          VK.Widgets.Group("vk_groups", {
-            mode: 4,
-            wide: 1,
-            height: 500,
-            with: 300,
-            color1: "28353E",
-            color2: "FFFFFF",
-            color3: "EB9929"
-          }, 164930433);
+          function loadVKWidget() {
+            // Скрываем заглушку и контейнер с кнопкой, показываем контейнер для виджета
+            document.getElementById('vk_placeholder').style.display = 'none';
+            document.getElementById('vk_button_container').style.display = 'none';
+            document.getElementById('vk_groups').style.display = 'block';
+
+            // Вставляем виджет ВК
+            VK.Widgets.Group("vk_groups", {
+              mode: 4,
+              wide: 1,
+              height: 500,
+              width: 300,
+              color1: "28353E",
+              color2: "FFFFFF",
+              color3: "EB9929"
+            }, 164930433);
+          }
         </script>
+
       </div>
     </div>
 
