фикс ошибок на выборах

--- a/state/templates/state/redesign/elections.html
+++ b/state/templates/state/redesign/elections.html
@@ -236,9 +236,9 @@
       const jsTable1 = new JsTable({
         tableContainerId: 'js-ct-table-1',
         columns: [
-			{ name: '{% trans "Герб" "context "lists" %}', className: 'j-t-image', isVisible: true },
-			{ name: '{% trans "Партия" "context "lists" %}', className: 'j-t-title', isVisible: true },
-			{ name: '{% trans "Действие" "context "lists" %}', className: 'j-t-action', isVisible: true },
+			{ name: '{% trans "Герб" context "lists" %}', className: 'j-t-image', isVisible: true },
+			{ name: '{% trans "Партия" context "lists" %}', className: 'j-t-title', isVisible: true },
+			{ name: '{% trans "Действие" context "lists" %}', className: 'j-t-action', isVisible: true },
         ],
       })
 
