--- a/party/templates/party/redesign/primaries.html
+++ b/party/templates/party/redesign/primaries.html
@@ -96,7 +96,7 @@
 
 	        <tr>
 			  <td class="j-t-image"></td>
-			  <td class="j-t-title">{% trans "Партия" "context "lists" %}</td>
+			  <td class="j-t-title">{% trans "Партия" context "lists" %}</td>
 			  <td class="j-t-action"></td>
 	        </tr>
 
