--- a/player/templates/player/header.html
+++ b/player/templates/player/header.html
@@ -8,7 +8,7 @@
     <script src="{% bootstrap_jquery_url %}"></script>
     {% bootstrap_javascript %}
     {% bootstrap_css %}
-    <script src='{% static "header.js" %}?{{ csrf_token }}'></script>
+    <script src='{% static "header.js" %}'></script>
     {% block for_scripts_and_css %}
     {% endblock %}
     <!-- Global site tag (gtag.js) - Google Analytics -->
