--- a/player/templates/player/redesign/overview_skills.html
+++ b/player/templates/player/redesign/overview_skills.html
@@ -7,7 +7,7 @@
 {% load tz %}
 {% load static %}
 {% load get_hh_mm_ss %}
-<script src='{% static "overview_skills.js" %}?{{ csrf_token }}'></script>
+<script src='{% static "overview_skills.js" %}'></script>
 <!--верхняя часть стат-->
 <div class="overview__love-stat-top">
 <!--Кнопка закрытия вкладки-->
