--- a/player/templates/player/banned.html
+++ b/player/templates/player/banned.html
@@ -6,7 +6,7 @@
     <script src="{% bootstrap_jquery_url %}"></script>
     {% bootstrap_javascript %}
     {% bootstrap_css %}
-    <script src='{% static "header.js" %}?{{ csrf_token }}'></script>
+    <script src='{% static "header.js" %}'></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-118774469-1"></script>
     <script>
