--- a/skill/templates/redesign/skill/skill_list.html
+++ b/skill/templates/redesign/skill/skill_list.html
@@ -12,7 +12,7 @@
 <script>
 	check_edu = true;
 </script>
-<script src='{% static "overview_skills.js" %}?{{ csrf_token }}'></script>
+<script src='{% static "overview_skills.js" %}'></script>
 <section class="skills custom-scroll">
     <h1 class="skills__title ct__page-title">{{ page_name }}</h1>
     <!--кнопки-->
