--- a/player/templates/player/redesign/overview.html
+++ b/player/templates/player/redesign/overview.html
@@ -989,7 +989,7 @@
     <script>
     const chat_conn_type = "{% if http_use %}ws{% else %}wss{% endif %}";
     </script>
-    <script src='{% static "redesign/js/chat.js" %}?{{ csrf_token }}'></script>
+    <script src='{% static "redesign/js/chat.js" %}'></script>
 <!--    <audio id="padoru" preload="auto"><source src='{% static "redesign/audio/padoru.mp3" %}?{{ csrf_token }}'></audio>-->
     </div>
     <!--конец Враппера двух вкладок-->
