--- a/party/templates/party/redesign/primaries.html
+++ b/party/templates/party/redesign/primaries.html
@@ -23,7 +23,7 @@
 
 		<!--Блок таблицы-->
     <div class="ct__js-table-container" id="js-ct-table-1">
-		<h1 class="ct__js-table-title ct__page-title">Праймериз: {{ player.party }}</h1>
+		<h1 class="ct__js-table-title ct__page-title">{% trans "Праймериз" context "lists" %}: {{ player.party }}</h1>
 		<!--кнопка открытия настроек-->
 		<button class="ct__js-modal-sett-open">
 			<svg version="1.0" xmlns="http://www.w3.org/2000/svg"
