--- a/education/templates/education/edu_overview.html
+++ b/education/templates/education/edu_overview.html
@@ -451,7 +451,7 @@
             <div class="overview__love-part active" id="overview__love-part">
 
               <!-- кнопка выборов -->
-              <a href="/elections/24/" class="overview__love-part-vote gui_help" data-helpid="overview parl_elections block">{% trans 'Выборы' context "overview" %}</a>
+              <a class="overview__love-part-vote gui_help" data-helpid="overview parl_elections block">{% trans 'Выборы' context "overview" %}</a>
 
               <!--партии государства-->
               <div class="overview__par active gui_help" data-helpid="overview state_paties block">
