--- a/player/static/redesign/css/style.css
+++ b/player/static/redesign/css/style.css
@@ -4600,7 +4600,8 @@ p.overview__love-stat-timer {
 	text-align: center;
 }
 
-.war__gerbs > img {
+.war__gerbs > img,
+.war__gerbs > svg {
 	display: block;
 	width: 70rem;
 	height: 70rem;
