--- a/education/templates/education/edu_war.html
+++ b/education/templates/education/edu_war.html
@@ -169,7 +169,8 @@
 			<label>
                 <input type="number" min="0" max="100" step="1" id="edu_tanks" name="1" maxlength="3">
             </label>
-			<span>/ 100</span>
+			<span>/ </span>
+			<span id="tanks_limit">100</span>
 		</div>
 
 		<div class="war__units-count">
@@ -177,7 +178,8 @@
 			<label>
                 <input type="number" min="0" max="100" step="1" id="edu_rifles" name="3" maxlength="3">
             </label>
-			<span>/ 100</span>
+			<span>/ </span>
+			<span id="rifles_limit">100</span>
 		</div>
 
 		<div class="war__units-count">
@@ -185,7 +187,8 @@
 			<label>
                 <input type="number" min="0" max="100" step="1" id="edu_ifv" name="4" maxlength="3">
             </label>
-			<span>/ 100</span>
+			<span>/ </span>
+			<span id="ifv_limit">100</span>
 		</div>
 	</div>
 
