--- a/education/templates/education/edu_lists/list_1.html
+++ b/education/templates/education/edu_lists/list_1.html
@@ -11,12 +11,14 @@
       $.ajax({
           beforeSend: function() {},
           type: "POST",
-          url: "/claim_reward/",
+          url: "/edu_reward/",
           data: data,
           cache: false,
           success: function(result){
-              if (result.response == 'ok'){
-                  actualize();
+              if (id == 'edu_all'){
+                  if (result.response == 'ok'){
+                      actualize();
+                  }
               }
           }
       });
@@ -35,7 +37,7 @@
     onEduStart: () => { console.log('[EDU]: Started') },
     onEduEnd: () => { console.log('[EDU]: Ended'); edu_pragma(16) },
     onEduPageChange: (num) => { console.log(`[EDU]: Current page is ${num}`); edu_pragma(num) },
-    onCloseEdu: () => { console.log(`[EDU]: Education closed`); claim_reward('edu_00'); },
+    onCloseEdu: () => { console.log(`[EDU]: Education closed`); claim_reward('edu_all'); },
     pages: [
       {
         text: "{% blocktrans with assistant=assistant_name.1 context "education" %}Здравствуйте! Меня зовут {{ assistant }}, я ваша помощница и верный союзник на вашем новом пути. Поздравляю вас с принятием в Партию Единства Республики — это первый шаг к вершинам политической карьеры!{% endblocktrans %}",
