--- a/education/templates/education/edu_lists/list_2.html
+++ b/education/templates/education/edu_lists/list_2.html
@@ -8,6 +8,7 @@
       }
 
     var assist_img = this.getFromLS() ?? "/static/redesign/img/Ann.png";
+    document.getElementsByClassName('edu__img')[0].src = assist_img;
 
     function claim_reward(id){
       var data = "&csrfmiddlewaretoken=" + csrftoken + "&edu_id=" + id;
@@ -20,7 +21,7 @@
           success: function(result){
             if (id == 'edu_all'){
                   if (result.response == 'ok'){
-                      actualize();
+                      location.reload();
                   }
             }
           }
